--- a/index.html
+++ b/index.html
@@ -269,16 +269,40 @@
                 </div>
             </section>
 
-            <!-- Courses -->
-            <section class="courses">
-                <h3 class="section-title">Courses</h3>
-                        <ul class="courses-all">
-                            <li class="courses-item">HTML+CSS --------------------------------------------------------------------------------------------- <a href="https://goit.ua/" target="_blank"><b>"GoIT School"</b></a></li> 
-                            <li class="courses-item">JavaScript ---------------------------------------------------------------------------------------------- <a href="https://goit.ua/" target="_blank"><b>"GoIT School"</b></a></li>
-                            <li class="courses-item">Project Management -------------------------------------------------------------------------------- <a href="https://foxminded.com.ua/" target="_blank"><b>"FoxmindEd"</b></a></li> 
-                            <li class="courses-item">Online sales ------------------------------------------------------------------------------------ <a href="https://businessonline.club/coaching" target="_blank"><b>"Bussiness Online"</b></a> </li> 
+            <div class="flex-block">
+                <!-- Courses -->
+                <section class="courses">
+                    <h3 class="section-title">Courses</h3>
+                            <ul class="courses-all">
+                                <li class="courses-item">HTML+CSS ------------------------ <a href="https://goit.ua/" target="_blank"><b>"GoIT School"</b></a></li> 
+                                <li class="courses-item">JavaScript ------------------------ <a href="https://goit.ua/" target="_blank"><b>"GoIT School"</b></a></li>
+                                <li class="courses-item">Project Management ----------- <a href="https://foxminded.com.ua/" target="_blank"><b>"FoxmindEd"</b></a></li> 
+                                <li class="courses-item">Online sales --------------- <a href="https://businessonline.club/coaching" target="_blank"><b>"Bussiness Online"</b></a> </li> 
+                            </ul>
+                </section>
+
+                <!-- Projects -->
+                <section class="projects">
+                    <h3 class="section-title">Projects</h3>
+                        <ul class="projects-all">
+                            <li class="projects-item">
+                                <a href="https://nobergan.github.io/goit-markup-hw-08/index.html" target="_blank">WebStudio</a>
+                            </li>
+                            <li class="projects-item">
+                                <a href="https://bsc-portal.com.ua/" target="_blank">BoschService</a>
+                            </li>
+                            <li class="projects-item">
+                                <a href="https://advance-esthetic.us/" target="_blank">A-Esthetic</a>
+                            </li>
+                            <li class="projects-item">
+                                <a href="https://venko.com.ua/" target="_blank">Venko</a>
+                            </li>
+                            <li class="projects-item">
+                                <a href="https://spashop.com.ua/" target="_blank">SpaShop</a>
+                            </li>
                         </ul>
-            </section>
+                </section>
+            </div>
 
             <!-- Recommendations -->
             <section class="recommend">
@@ -288,27 +312,7 @@
                     </ul>
             </section>
 
-            <!-- Projects -->
-            <section class="projects">
-                <h3 class="section-title">Projects</h3>
-                    <ul class="projects-all">
-                        <li class="projects-item">
-                            <a href="https://nobergan.github.io/goit-markup-hw-08/index.html" target="_blank">WebStudio</a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="https://bsc-portal.com.ua/" target="_blank">BoschService</a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="https://advance-esthetic.us/" target="_blank">A-Esthetic</a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="https://venko.com.ua/" target="_blank">Venko</a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="https://spashop.com.ua/" target="_blank">SpaShop</a>
-                        </li>
-                    </ul>
-            </section>
+
 
             <!-- Cover letter BUTTON -->
             <button type="button" class="cl-btn" data-modal-open>Cover letter is here</button>
