--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
         <div class="about-me-container">
             <!-- Info container -->
             <section class="info-container">                
+                <div>
                 <h1 class="name">Vladimir Kostetskyi</h1>
-                <h2 class="profession">Frontend Developer</h2>                
+                <h2 class="profession">Frontend Developer</h2> 
+                </div>               
             </section>
 
             <!-- Personal profile -->
