--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <div class="modal-text">
                     <p>Good day!</p>
                     <p>I would like to add a few words about myself.</p>
-                    <p>I have HTML / CSS, basic knowledge of JavaScript, JQuery, as well as in the field of project management, thanks to which I can contribute to the successful promotion of your company.</p>
+                    <p>I have knowledge of HTML / CSS, basic knowledge of JavaScript, JQuery, as well as in the field of project management, thanks to which I can contribute to the successful promotion of your company.</p>
                     <p>I have 1 year of experience in a web studio, from which I have been working as a developer for 4 months.</p>
                     <p>I like to think, study and communicate, I work hard and with pleasure. I hope to get the opportunity to work with interesting projects to develop myself and my knowledge. As well as the possibility of career growth and decent wages.</p>
                     <p>I would be grateful if you consider me as your employee.</p>
@@ -334,7 +334,6 @@
                 <button type="button" class="modal-btn" data-modal-close>Ok</button>
             </div>
         </div>
-    </div>
 
     <script src="./js/modal.js"></script>
 </body>
