--- a/index.html
+++ b/index.html
@@ -335,6 +335,11 @@
             </div>
         </div>
 
+         <div class="lang-box">
+            <button type="button" class="resume-rus" onclick="javascript:location.href='https://nobergan.github.io/resume-Kostetskyi-Volodymyr-rus/';">RU</button>
+            <button type="button" class="resume-en">EN</button>
+        </div>
+
     <script src="./js/modal.js"></script>
 </body>
 </html>
